cabal-version: 3.0
name:          tweetogram
version:       0.1.0.0

common lang
  build-depends:
    , base    >=4.12    && <4.15
    , relude  ^>=1.0.0.1

  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    Arrows
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DuplicateRecordFields
    EmptyCase
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wcompat
    -Wincomplete-record-updates -Wmissing-home-modules
    -Wmissing-export-lists -Wredundant-constraints

executable tweetogram
  import:         lang
  main-is:        Main.hs

  -- cabal-fmt: expand cmd/tweetogram -Main
  other-modules:
  hs-source-dirs: cmd/tweetogram
  build-depends:
    , aeson                 ^>=1.5.6.0
    , conduit               ^>=1.3.4.2
    , conduit-throttle      ^>=0.3.1.0
    , filepath              ^>=1.4.2.1
    , lens                  ^>=5.0.1
    , optparse-applicative  ^>=0.16.1.0
    , twitter-conduit       ^>=0.5.1
    , twitter-types         ^>=0.10.1
    , vector                ^>=0.12.3.1
