cabal-version: 3.0
name:          tweetogram
version:       0.2.0.0

common lang
  build-depends:
    , base    >=4.12    && <4.15
    , relude  ^>=1.0.0.1

  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    Arrows
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DuplicateRecordFields
    EmptyCase
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wcompat
    -Wincomplete-record-updates -Wmissing-home-modules
    -Wmissing-export-lists -Wredundant-constraints

library
  import:          lang
  hs-source-dirs:  src

  -- cabal-fmt: expand src
  exposed-modules:
    Tweetogram.Download
    Tweetogram.Query.Activity
    Tweetogram.Query.Likes
    Tweetogram.Store

  build-depends:
    , aeson                 ^>=1.5.6
    , async                 ^>=2.2.4
    , concurrent-output     ^>=1.10.12
    , conduit               ^>=1.3.4
    , containers            ^>=0.6.5
    , data-default          ^>=0.7.1
    , filepath              ^>=1.4.2
    , lens                  ^>=5.0.1
    , mono-traversable      ^>=1.0.15
    , optparse-applicative  ^>=0.16.1
    , resourcet             ^>=1.2.4
    , table-layout          ^>=0.9.1
    , time                  ^>=1.11
    , twitter-conduit       ^>=0.5.1
    , twitter-types         ^>=0.10.1
    , vector                ^>=0.12.3

executable tweetogram
  import:         lang
  main-is:        Main.hs

  -- cabal-fmt: expand cmd/tweetogram -Main
  other-modules:  Tweetogram.CLI
  hs-source-dirs: cmd/tweetogram
  build-depends:
    , aeson                 ^>=1.5.6.0
    , async                 ^>=2.2.4
    , concurrent-output     ^>=1.10.12
    , conduit               ^>=1.3.4.2
    , containers            ^>=0.6.5.1
    , data-default          ^>=0.7.1.1
    , filepath              ^>=1.4.2.1
    , lens                  ^>=5.0.1
    , optparse-applicative  ^>=0.16.1.0
    , table-layout          ^>=0.9.1.0
    , time                  ^>=1.11
    , tweetogram
    , twitter-conduit       ^>=0.5.1
    , twitter-types         ^>=0.10.1
    , vector                ^>=0.12.3.1
