cabal-version: 3.0
name:          tweetogram
version:       0.2.0.0

common lang
  build-depends:
    , base    >=4.12    && <4.15
    , relude  ^>=1.0.0.1

  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    Arrows
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DuplicateRecordFields
    EmptyCase
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wcompat
    -Wincomplete-record-updates -Wmissing-home-modules
    -Wmissing-export-lists -Wredundant-constraints

common deps
  build-depends:
    , conduit          ^>=1.3.4
    , containers       ^>=0.6.5
    , data-default     ^>=0.7.1
    , resourcet        ^>=1.2.4
    , time             ^>=1.11
    , twitter-conduit  ^>=0.5.1
    , twitter-types    ^>=0.10.1

library
  import:          lang
  import:          deps
  hs-source-dirs:  src

  -- cabal-fmt: expand src
  exposed-modules:
    Tweetogram.Download
    Tweetogram.Query.Activity
    Tweetogram.Query.Likes
    Tweetogram.Store

  build-depends:
    , aeson             ^>=1.5.6
    , lens              ^>=5.0.1
    , mono-traversable  ^>=1.0.15
    , primitive         ^>=0.7.2
    , vector            ^>=0.12.3

executable tweetogram
  import:         lang
  import:         deps
  main-is:        Main.hs

  -- cabal-fmt: expand cmd/tweetogram -Main
  other-modules:
    Tweetogram.CLI.Download
    Tweetogram.CLI.Errors
    Tweetogram.CLI.Options
    Tweetogram.CLI.Query.Activity
    Tweetogram.CLI.Query.Likes
    Tweetogram.CLI.Store

  hs-source-dirs: cmd/tweetogram
  build-depends:
    , async                 ^>=2.2.4
    , concurrent-output     ^>=1.10.12
    , filepath              ^>=1.4.2
    , optparse-applicative  ^>=0.16.1
    , table-layout          ^>=0.9.1
    , tweetogram
